# pyhdf

./: .appveyor.yml  .gitignore  .travis.yml  AUTHORS  CHANGES  INSTALL  INSTALL.rst  LICENSE  MANIFEST  MANIFEST.in  Makefile  PKG-INFO  README  README.md  README.rst  README.txt  genindex.html  index.html  install.html  objects.inv  private-info  py-modindex.html  pyproject.toml  runexamples.py  runexamples.sh  search.html  searchindex.js  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE
.github/workflows/: ci.yml  package.yml  package_and_publish.yml  tests.yml
.travis/: install_osx_miniconda.bash
_modules/: index.html
_modules/pyhdf/: HC.html  HDF.html  SD.html  V.html  VS.html  error.html
_pyhdf/: LICENSE  setup.cfg  setup.py
_pyhdf/doc/: pyhdf.HDF.html  pyhdf.V.txt  pyhdf.VS.txt  pyhdf.html
_pyhdf/pyhdf/: V.py
_sources/: index.rst.txt  install.rst.txt
_sources/modules/: HDF.rst.txt  V.rst.txt  VS.rst.txt
doc/: Makefile  conf.py  index.html  index.rst  install.rst  make.bat  makedoc  pyhdf.HDF.html  pyhdf.HDF.txt  pyhdf.SD.html  pyhdf.SD.txt  pyhdf.V.html  pyhdf.VS.html  pyhdf.VS.txt  pyhdf.odl_parser.html
doc/modules/: SD.rst
doc/pycdf/: CHANGES  INSTALL  index.html  pycdf.html  (+1 more)
examples/: runall.py
modules/: HDF.html  SD.html  V.html  VS.html
mpy/: INSTALL  mpy.pyx  setup.py
pycdf/: CHANGES  INSTALL  MANIFEST  PKG-INFO  README  iml-notes  setup.cfg  setup.py
pyhdf/: AUTHORS  CHANGES  HC.py  HDF.py  INSTALL  MANIFEST  Makefile  PKG-INFO  README  SD.py  V.py  VS.py  hdfext.i  hdfext.py  hdfext_wrap.c  setup.cfg  setup.py  test_SD.py
(+189 files in other folders)
